--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+        <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>ProdutoDetail</ion-title>
   </ion-navbar>
@@ -9,11 +9,11 @@
 
 <ion-content padding>
   <ion-card>
-    <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'">
+    <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
     <ion-card-content>
       <ion-card-title>
         {{item?.nome}}
-      </ion-card-title>
+        </ion-card-title>
       <p>
         {{item?.preco | currency}}
       </p>
