--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -10,7 +9,7 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="showDetail()">
+    <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)">
       <ion-thumbnail item-start>
         <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
       </ion-thumbnail>
@@ -18,6 +17,4 @@
       <p>{{item.preco | currency}}</p>
     </button>
   </ion-list>
-
-
 </ion-content>
