--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Cart</ion-title>
+    <ion-title>Carrinho de compras</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -23,7 +23,7 @@
     </ion-item>
     <ion-item *ngIf="total() > 0">
       <h1>Total</h1>
-      <h1 item-end>{{total()}}</h1>
+      <h1 item-end>R${{total()}}</h1>
     </ion-item>
     <ion-item *ngIf="total() <= 0">
       <h1>Seu carrinho está vazio</h1>
