--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,6 +26,7 @@
 
   <ion-item>
     <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn" cordova-plugin-background-mode>Camera</button>
+    <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn" cordova-plugin-background-mode>Galeria</button>
     <button *ngIf="picture" ion-button outline block (click)="sendPicture()" >Enviar imagem</button>
     <button *ngIf="picture" ion-button outline block (click)="cancel()" >Descartar imagem</button>
   </ion-item>
