--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -4,12 +4,17 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Profile</ion-title>
+    <ion-title>Perfil</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
   <ion-avatar>
     <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'">
   </ion-avatar>
@@ -17,19 +22,22 @@
   <p text-center>{{cliente?.email}}</p>
 
   <ion-card>
-  <ion-card-header>
-    Enviar imagem de perfil
-  </ion-card-header>
-  <ion-item *ngIf="picture">
-    <img [src]="picture">
-  </ion-item>
+   
+    <ion-card-header > 
+      <h2 text-center>Trocar foto de perfil</h2>
+    </ion-card-header>
+    <ion-item *ngIf="picture">
+      <img [src]="picture">
+    </ion-item>
 
-  <ion-item>
-    <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn" cordova-plugin-background-mode>Camera</button>
-    <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn" cordova-plugin-background-mode>Galeria</button>
-    <button *ngIf="picture" ion-button outline block (click)="sendPicture()" >Enviar imagem</button>
-    <button *ngIf="picture" ion-button outline block (click)="cancel()" >Descartar imagem</button>
-  </ion-item>
+    <ion-item>
+      <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn"
+        cordova-plugin-background-mode>Camera</button>
+      <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn"
+        cordova-plugin-background-mode>Galeria</button>
+      <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
+      <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
+    </ion-item>
 
   </ion-card>
 </ion-content>
