--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -24,7 +24,7 @@
             </ion-thumbnail>
             <h2>{{item.produto.nome}}</h2>
             <p>{{item.produto.preco | currency}}</p>
-            <p class="nolinebreak">{{item.quantidade}}</p>
+            <p class="nolinebreak">{{item.quantidade}} unidades</p>
             <p item-end>{{item.produto.preco * item.quantidade | currency}}</p>
           </ion-item>
 
